# cnu-chat

./: .gitignore  README.md  chatbot.sh  pyproject.toml  requirements.txt  run_gradio.py  run_server.py
config/: settings.py
data/: test_cls.json  test_realtime.json  train.json  valid.json
data/raw/: _cnu_notices.json  graduation.json  menu_crawled.json  menu_time.json  schedule.jsonl  shuttle.json
outputs/: realtime_output.json
src/: classifier.ipynb
src/api/: main.py  models.py
src/core/: classifier.py
src/crawler/: cnu_food_crawler.py
src/database/: chroma_vector_store.py
src/ui/: gradio_app.py
