[project]
name = "cnu-chat"
version = "0.1.0"
description = "CNU Chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.52.4",
    "torch>=2.0.0",
    "peft>=0.8.0",
    "accelerate>=0.26.0",
    "scikit-learn>=1.3.0",
    "gradio>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "bitsandbytes>=0.41.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.0",
    "chromadb>=0.4.0",
    "schedule>=1.2.0"
]

